@@ -51,8 +51,11 @@ a desired row number in \code{x@summary} or a desired element number in \code{x@
 a desired number of clusters to be plotted. The default value is \code{expression(c)}.
 }
 \item{what}{
-a character vector giving the plot types. One of \code{"pdf"} for probability density function, \code{"marginal pdf"} for marginal probability density function, \code{"IC"} for information criterion depending on numbers of components \eqn{c}, \code{"logL"} for log likelihood, \code{"D"} for total of positive relative deviations, \code{"marginal cdf"} for marginal distribution function or \code{"K"} for information criterion depending on bins \eqn{v} or numbers of nearest neighbours \eqn{k}.
-The default value is \code{"pdf"}.
+a character vector giving the plot types. One of \code{"pdf"} for probability density function, \code{"marginal pdf"} 
+for marginal probability density function, \code{"IC"} for information criterion depending on numbers of components 
+\eqn{c}, \code{"logL"} for log likelihood, \code{"D"} for total of positive relative deviations, \code{"K"} for information criterion depending 
+on bins \eqn{v} or numbers of nearest neighbours \eqn{k}, \code{"cdf"} for univariate distribution function or
+\code{"marginal cdf"} for marginal distribution function. The default value is \code{"pdf"}.
 }
 \item{nrow}{
 a desired number of rows in which the empirical and predictive densities are to be plotted. The default value is \code{1}.
